fixed whitespace around menu button and footer width

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -55,4 +55,8 @@
     font-size: 0.9rem;
     padding: 0 3rem;
   }
+  .copyright {
+    width: 90%;
+    margin: auto;
+  }
 }
