--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -65,11 +65,15 @@
 }
 
 @media (max-width: 768px) {
+  .headerText {
+    padding-top: 5rem;
+    padding-bottom: 0;
+  }
   .headerImage {
-    margin-left: 2.5rem;
-    padding: 1rem;
-    height: 500px;
-    width: 650px;
+    margin: auto;
+    padding: 0;
+    height: 340px;
+    width: 380px;
   }
   .imageDiv {
     width: 50%;
@@ -84,30 +88,5 @@
     font-weight: 300;
     font-size: 1.1rem;
     padding-bottom: 3rem;
-  }
-}
-
-@media (max-width: 650px) {
-  .headerImage {
-    margin-left: 2rem;
-    padding: 0;
-    height: 450px;
-    width: 400px;
-  }
-  .headerText h3 {
-    padding: 0;
-  }
-  .headerText {
-    padding-top: 4rem;
-    padding-bottom: 0;
-  }
-}
-
-@media (max-width: 450px) {
-  .headerImage {
-    margin: auto;
-    padding: 0;
-    height: 340px;
-    width: 380px;
   }
 }
