--- a/src/components/SimpleMenu/SimpleMenu.module.css
+++ b/src/components/SimpleMenu/SimpleMenu.module.css
@@ -7,7 +7,6 @@
 .hamburger {
   align-items: center;
   background-color: transparent;
-  padding: 1.5rem 1.5rem;
   display: flex;
   position: fixed;
   width: 0px;
@@ -80,10 +79,4 @@ a {
   color: var(--text);
   font-size: 1.5rem;
   cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .hamburger {
-    padding: 1rem;
-  }
 }
